# Projet-Jeu-Raylib

./: CMakeLists.txt  Makefile  README.md  main.c
utils/: main.h
utils/entity/: player.c  player.h  player_collisions.c  player_move.c
utils/scene/: scene.h  scene_game.c  scene_home.c
